# CentreMark

./: CMakeLists.txt  README.md
include/: centremark.h
source/: lib.c
